# isaac_fetchbot

./: CMakeLists.txt  package.xml
bash_scripts/: isaac_fetchbot_startup.sh
behavior_trees/: pivot_bt.xml
config/: pivot_bt (copy 19May25 1031AM orig VSCC).xml_backup  pivot_bt.xml
groot_proj/: Project.btproj  pivot_angle_test_1.btproj
install/: local_setup.sh  setup.sh
launch/: pivot_bt.launch.py
log/: latest_build
maps/: my_map_1618_combined_windows_restored.yaml  my_map_1618_combined_windows_restored_no_tv.xcf  my_map_1618_combined_windows_restored_no_tv.yaml  my_map_1618_keepout_mask (copy 11Sep25 before darkening keepout areas).xcf  my_map_1618_keepout_mask (copy 23Aug25).xcf  my_map_1618_keepout_mask.xcf  my_map_1618_keepout_mask.yaml  test_save_24Mar25_1132AM.pgm  test_save_24Mar25_1132AM.yaml
plots/: .~lock.Plot Screenshots 06Apr25.odt#  Cool screen shot trying to navigate outside house 18Sep25.docx  More nav screenshots 19Sep25.docx  Plot Screenshots 06Apr25.odt  cmd_vel vs cmd_vel_nav 06Apr25 1025am.xml  nav pics 17Sep25.docx
src/: bt_pivot_angle_node (copy working version behaviortree_cpp_v3 20May25).cpp_backup  bt_pivot_angle_node.cpp  bt_pivot_angle_node_runner.cpp
