<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_fetchbot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="70774.2143@compuserve.com">bd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>my_fetchbot_humble</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
